Remove cacheHtml from SpiderService